fix overall container padding and add spacing between rows

--- a/app/assets/stylesheets/contentful/_layout.scss
+++ b/app/assets/stylesheets/contentful/_layout.scss
@@ -1,5 +1,6 @@
 .app-container {
   width: 100%;
+  margin-top: 96px;
 }
 
 // use this class for breakpoints
@@ -10,7 +11,7 @@
   max-width: 1776px;
 
   @include breakpoint(tablet) {
-    padding: 0 48px;
+    padding: 24px 48px;
     width: calc(100% - 96px);
   }
   @include breakpoint(desktop) {
@@ -19,6 +20,11 @@
   }
   @include breakpoint(fullhd) {
   }
+}
+
+div.section-row.tile,
+div.section-row.columns {
+  margin-top: 50px;
 }
 
 // custom offset (bulma doesn't have this margin-right version)
